# Jornada_de_Dados_Workshop_Como_Estruturar_O_Seu_Projeto_de_Dados_do_Zero

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflow/: ci.yml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/input/: absenteeism_data_0.xlsx  absenteeism_data_33.xlsx  absenteeism_data_4.xlsx
data/output/: output.xlsx
docs/: index.md
search/: search_index.json
tests/: test_pipeline.py
