[project]
name = "workshop-como-estruturar-o-seu-projeto-de-dados-do-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Madson Cordeiro",email = "e-mail@email.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
